tests/reference/asr-test_assign1-a94d41e.stderr
semantic error: Type mismatch in assignment, the types must be compatible
 --> tests/errors/test_assign1.py:6:5
  |
6 |     a = b
  |     ^   ^ type mismatch ('list[i32]' and 'list[str]')
